# fastapi-starter

./: .env.example  .gitignore  .http  Makefile  README.md  compose.yml  database.sql  main.py  pyproject.toml
modules/: app.py  database.py  response.py
modules/auth/: handler.py  schema.py  service.py
modules/base/: handler.py
modules/product/: handler.py  model.py  schema.py  service.py
tests/: test_module_base.py
ui/: app.py
ui/templates/: index.html
